# cocotb-ralgen

./: .coverage-tmp.html  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  duties.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  version.py
.github/workflows/: ci.yml  dev.yml  preview.yml  release.yml
ai/: index.html
changelog/: index.html
code_of_conduct/: index.html
config/: ruff.toml
contributing/: index.html
credits/: index.html
docs/: conf.py
license/: index.html
reference/SUMMARY/: index.html
reference/peakrdl_cocotb_ralgen/: index.html
reference/peakrdl_cocotb_ralgen/callbacks/: index.html
reference/peakrdl_cocotb_ralgen/callbacks/bsv/: index.html
reference/peakrdl_cocotb_ralgen/callbacks/callback_base/: index.html
reference/peakrdl_cocotb_ralgen/cli/: index.html
reference/peakrdl_cocotb_ralgen/exporter/: index.html
reference/peakrdl_cocotb_ralgen/ralgen/: index.html
reference/peakrdl_cocotb_ralgen/testcases/: index.html
reference/peakrdl_cocotb_ralgen/testcases/reset_test/: index.html
reference/peakrdl_cocotb_ralgen/testcases/rw_test/: index.html
scripts/: gen_credits.py
search/: search_index.json
src/peakrdl_cocotb_ralgen/: __init__.py  __peakrdl__.py  cli.py  exporter.py  printpyvsc.py  printtoml.py  ralgen.py
src/peakrdl_cocotb_ralgen/callbacks/: callback_base.py
src/peakrdl_cocotb_ralgen/templates/: ralgen.j2
src/peakrdl_cocotb_ralgen/testcases/: reset_test.py  rw_test.py  walking_ones_test.py
src/peakrdl_cocotb_ralgenerator/: cli.py  exporter.py  ralgen.py
src/peakrdl_cocotb_ralgenerator/testcases/: rw_test.py
src/peakrdl_cocotb_raltest/: __init__.py  cli.py  exporter.py  raltest.py
tests/: Makefile  cocotbtest_dma.py  cocotbtest_mdma.py  cocotbtest_soc.py  env.py  requirements.txt  test_dma.py  three_dma.rdl  top.rdl
