[project]
name = "peakrdl-cocotb-ralgenerator"
dynamic = ["version"]
description = "Generate RAL tests from systemRDL."
authors = [
    {name = "Vijayvithal Jahagirdar", email = "jahagirdar.vs@gmail.com"},
]
dependencies = [
    "systemrdl-compiler>=1.27.3",
    "jinja2>=3.1.4",
    "peakrdl>=1.1.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.entry-points."peakrdl.exporters"]
mkcocotb_ral = "peakrdl_cocotb_ralgenerator.__peakrdl__:Exporter"
[project.scripts]
mkcocotb_ral = "peakrdl_cocotb_ralgenerator.cli:cocotb_ralgenerator"

[project.urls]
Homepage = "https://dyumnin.com/cocotb_ralgenerator"
Repository = "https://github.com/dyumnin/cocotb-ralgenerator.git"
Issues = "https://github.com/dyumnin/cocotb-ralgenerator/issues"
Documentation = "https://dyumnin.github.io/cocotb-ralgenerator"
[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
version_format = "version:format_version"

[tool.pdm.dev-dependencies]
duty = ["duty>=0.10"]
ci-quality = [
    "peakrdl-cocotb-ralgenerator[duty,docs,quality,typing,security]",
    "griffe>=1.5.1",
]
ci-tests = ["peakrdl-cocotb-ralgenerator[duty,tests,mdextractor]"]
docs = [
    "black>=23.9",
    "markdown-callouts>=0.3",
    "markdown-exec>=1.7",
    "mkdocs>=1.5",
    "mkdocs-coverage>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-committers-plugin-2>=1.2",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9.4",
    "mkdocs-minify-plugin>=0.7",
    "mkdocstrings[python]>=0.23",
    "tomli>=2.0; python_version < '3.11'",
]
maintain = [
    "black>=23.9",
    "blacken-docs>=1.16",
    "git-changelog>=2.3",
]
quality = [
    "ruff>=0.0",
]
tests = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.3",
"mdextractor",
]
typing = [
    "mypy>=1.5",
    "types-markdown>=3.5",
    "types-pyyaml>=6.0",
]
security = [
    "safety>=2.3",
]
